# chatbot-video-analyst

./: .gitignore
backend/: README.md  chat.proto  chat_client.py  chat_pb2.py  chat_pb2_grpc.py  chat_server.py  chat_store.py  formater.py  pyproject.toml
backend/agent/: custom_transformer_wrapper.py  generation_agent.py  main_agent.py  model.py  transcription_agent.py  vision_agent.py
backend/mcp_server/: generation.py  transcription.py  vision.py
backend/model/: whisper.py
backend/outputs/: video_summary_de869447.pptx
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
proto/: chat.proto
