[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "fastmcp>=3.4.2",
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "langchain>=1.3.9",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.5",
    "num2words>=0.5.14",
    "python-pptx>=1.0.2",
    "reportlab>=4.2.5",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.0",
    "num2words>=0.5.14",
    "langchain-ollama>=1.1.0",
]
